examples/test/testpolicy6713.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6713
  namespace: namespace240
spec:
  podSelector:
    matchLabels:
      key20: value7
      key44: value28
      key25: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value15
          key18: value18
          key19: value5
      podSelector:
        matchLabels:
          key23: value32
